@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Old Stable 3.9.X Release</th>
-      <td><a href="v3.9.6.html">v3.9.6</a></td>
+      <td><a href="v3.9.7.html">v3.9.7</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -114,7 +114,7 @@
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2012-02-18 22:24:55 $.
+    Last updated  $Date: 2012-09-22 17:16:19 $.
   </p>
 </body>
 </html>
