@@ -1,5 +1,7 @@
 2012-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* libtiff 3.9.7 released.
+
 	* automake: Update to use GNU automake 1.12.4
 
 2012-07-19  Tom Lane  <tgl@sss.pgh.pa.us>
